<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        android:visibility="visible"
        app:itemIconTint="@android:color/widget_edittext_dark"
        app:itemTextColor="@color/cardview_dark_background"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nav_view"
        android:layout_below="@id/toolbar"
        android:layout_alignParentBottom="false"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:background="@color/cardview_shadow_end_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="6dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:id="@+id/toolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:contentDescription="@string/camera"
                android:padding="5dp"
                app:srcCompat="@drawable/camera" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="170dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:contentDescription="@string/itv"
                android:padding="5dp"
                app:srcCompat="@drawable/tv" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:contentDescription="@string/send"
                android:padding="5dp"
                app:srcCompat="@drawable/send" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>