<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlinearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llh1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilestorypic"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center|top|center_vertical"
                    android:src="@drawable/goku"
                    app:civ_border_color="#E8303C"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/storyname"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/nayan"
                    android:textColor="#464646"
                    android:textSize="17sp" />

            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_gravity="top"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:background="#CECECE"
        android:foregroundGravity="top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llh2"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilestorypic1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity=""
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/hr"
                    app:civ_border_color="#E8303C"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="3dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:text="@string/hritik_roshan"
                    android:textColor="#464646"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/menu"
                    app:tint="#4A4848" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="center"
                    app:srcCompat="@drawable/goku1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="42dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:focusable="auto"
                        android:focusableInTouchMode="true"
                        android:padding="4dp"
                        android:src="@drawable/like" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="42dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:focusable="auto"
                        android:focusableInTouchMode="true"
                        android:padding="4dp"
                        android:src="@drawable/conversation" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="42dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:focusableInTouchMode="true"
                        android:padding="4dp"
                        android:src="@drawable/share" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="42dp"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:padding="4dp"
                            android:src="@drawable/download" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>



